[project]
name = "diabetes_unfriend"
version = "0.1.0"
description = "A diabetes management assistant application"

[tool.diabetes_unfriend]
# Google API Key for Gemini model
google_api_key = "AIzaSyCTNm5TXz8nSCeylXmlfMZooKLOKwMops8"

# MongoDB Connection Settings
mongodb_uri = "mongodb+srv://medical:Medical123@cluster0.qcfg4sy.mongodb.net/diabetes_db?retryWrites=true&w=majority&appName=Cluster0"